--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,21 @@
 root = true
+[*]
+charset = utf-8
+
 [*.{kt,kts}]
+ktlint_code_style = ktlint_official
+ktlint_standard = enabled
+ktlint_experimental = enabled
 disabled_rules=import-ordering
+
+# disable rules
 ktlint_standard_import-ordering = disabled
+ktlint_standard_trailing-comma-on-call-site = disabled
+ktlint_standard_trailing-comma-on-declaration-site = disabled
+ktlint_standard_chain-method-continuation = disabled
+ktlint_standard_property-naming = disabled
+ktlint_standard_backing-property-naming = disabled
+ktlint_function_naming_ignore_when_annotated_with = Composable
 ktlint_import-ordering = disabled
 ktlint_trailing-comma-on-call-site = disabled
 ktlint_trailing-comma-on-declaration-site = disabled
