--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,8 @@
 kotlin.code.style=official
-kotlin.version=2.1.10
-agp.version=8.9.0
-compose.version=1.7.3
+
+# https://twitter.com/Sellmair/status/1543938828062392322
+import_orphan_source_sets=false
+
+kotlin.mpp.stability.nowarn=true
+kotlin.mpp.androidSourceSetLayoutVersion=2
+org.jetbrains.compose.experimental.macos.enabled=true
