--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,31 @@
 [versions]
 kotlin = "2.1.10"
+kotlinImmutableCollections = "0.3.5"
 compose-plugin = "1.7.3"
+detektVersion = "1.22.0"
+ktlintGradle = "11.3.2"
+commonsLang3 = "3.12.0"
+
+# For Test
+kotlinCoroutinesTest = "1.6.4"
+mockK = "1.12.0"
+jUnit = "4.12"
+truth = "1.1.3"
+
 
 [libraries]
+apache-commons-lang3 = { group = "org.apache.commons", name = "commons-lang3", version.ref = "commonsLang3" }
+kotlinx-collections-immutable = { group = "org.jetbrains.kotlinx", name = "kotlinx-collections-immutable", version.ref = "kotlinImmutableCollections" }
+
+# For Test
+test-mockK = { group = "io.mockk", name = "mockk", version.ref = "mockK" }
+test-junit = { group = "junit", name = "junit", version.ref = "jUnit" }
+test-truth = { group = "com.google.truth", name = "truth", version.ref = "truth" }
+kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinCoroutinesTest" }
 
 [plugins]
 jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "compose-plugin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detektVersion" }
+ktlintGradle = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlintGradle" }
